[gd_scene load_steps=11 format=3 uid="uid://rukhcfl4rwli"]

[ext_resource type="Script" uid="uid://6382eyvu3rmh" path="res://scenes/menu/main_menu.gd" id="1_bqqt6"]
[ext_resource type="Texture2D" uid="uid://bk737hwrium3" path="res://assets/menu/bg_main_menu.png" id="2_wu84c"]
[ext_resource type="FontFile" uid="uid://bn0212nw3j40m" path="res://assets/menu/Jersey10-Regular.ttf" id="4_wu84c"]
[ext_resource type="FontFile" uid="uid://bfm4pdj6ogqh0" path="res://assets/menu/PixelOperator-Bold.ttf" id="5_8ln24"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_8ln24"]
texture = ExtResource("2_wu84c")
modulate_color = Color(0.38170326, 0.38170323, 0.38170326, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tbmy8"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wu84c"]
bg_color = Color(0.14044744, 0.14044744, 0.14044744, 1)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rtw2f"]
bg_color = Color(0.88235295, 0.88235295, 0.88235295, 0.8627451)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_wu84c"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8ln24"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12

[node name="MainMenu" type="Node"]
script = ExtResource("1_bqqt6")

[node name="Panel" type="Panel" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_8ln24")

[node name="GameTitle" type="Label" parent="."]
texture_filter = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -324.0
offset_top = -260.0
offset_right = 324.0
offset_bottom = -28.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/line_spacing = -28
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("4_wu84c")
theme_override_font_sizes/font_size = 120
text = "Baby's First
Platformer"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -145.0
offset_top = 52.0
offset_right = 145.0
offset_bottom = 292.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 24

[node name="Level1" type="Button" parent="VBoxContainer"]
texture_filter = 1
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(0.056291595, 0.056291595, 0.05629161, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("5_8ln24")
theme_override_font_sizes/font_size = 46
theme_override_styles/normal = SubResource("StyleBoxFlat_tbmy8")
theme_override_styles/pressed = SubResource("StyleBoxFlat_wu84c")
theme_override_styles/hover = SubResource("StyleBoxFlat_rtw2f")
theme_override_styles/focus = SubResource("StyleBoxEmpty_wu84c")
text = "Level 1"

[node name="Level2" type="Button" parent="VBoxContainer"]
texture_filter = 1
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(0.056291595, 0.056291595, 0.05629161, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("5_8ln24")
theme_override_font_sizes/font_size = 46
theme_override_styles/normal = SubResource("StyleBoxFlat_8ln24")
theme_override_styles/pressed = SubResource("StyleBoxFlat_wu84c")
theme_override_styles/hover = SubResource("StyleBoxFlat_rtw2f")
theme_override_styles/focus = SubResource("StyleBoxEmpty_wu84c")
text = "Level 2"

[node name="Exit" type="Button" parent="VBoxContainer"]
texture_filter = 1
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(0.056291595, 0.056291595, 0.05629161, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("5_8ln24")
theme_override_font_sizes/font_size = 46
theme_override_styles/normal = SubResource("StyleBoxFlat_8ln24")
theme_override_styles/pressed = SubResource("StyleBoxFlat_wu84c")
theme_override_styles/hover = SubResource("StyleBoxFlat_rtw2f")
theme_override_styles/focus = SubResource("StyleBoxEmpty_wu84c")
text = "Exit"

[connection signal="pressed" from="VBoxContainer/Level1" to="." method="_on_level_1_pressed"]
[connection signal="pressed" from="VBoxContainer/Level2" to="." method="_on_level_2_pressed"]
[connection signal="pressed" from="VBoxContainer/Exit" to="." method="_on_exit_pressed"]
